<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/location_options"
        android:textAlignment="center"
        android:textSize="20dp"
        android:paddingVertical="8dp"
        android:textColor="@color/white"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvToronto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/toronto"
        android:textAlignment="center"
        android:paddingVertical="8dp"
        android:textColor="@color/white"
        android:background="@color/purple_200"
        android:onClick="click"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInstructions" />

    <TextView
        android:id="@+id/tvMississauga"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/mississauga"
        android:textAlignment="center"
        android:paddingVertical="8dp"
        android:textColor="@color/white"
        android:background="@color/purple_200"
        android:onClick="click"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvToronto" />

    <TextView
        android:id="@+id/tvOakville"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/oakville"
        android:textAlignment="center"
        android:paddingVertical="8dp"
        android:textColor="@color/white"
        android:background="@color/purple_200"
        android:onClick="click"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMississauga" />

    <TextView
        android:id="@+id/tvHamilton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/hamilton"
        android:textAlignment="center"
        android:paddingVertical="8dp"
        android:textColor="@color/white"
        android:background="@color/purple_200"
        android:onClick="click"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOakville" />

    <TextView
        android:id="@+id/tvNewYork"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/ny"
        android:textAlignment="center"
        android:paddingVertical="8dp"
        android:textColor="@color/white"
        android:background="@color/purple_200"
        android:onClick="click"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHamilton" />
</androidx.constraintlayout.widget.ConstraintLayout>